# vectorfox

./: Makefile  README.md  cli.py  index.py  init_qdrant_collection.py  pyproject.toml  requirements.txt
src/vectorfox/: app.py  cli.py  config.json  db.py  index.py  llm.py  run.py
src/vectorfox/static/: main.js  style.css
src/vectorfox/templates/: index.html
