[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorfox"
version = "0.1.0"
description = "Search Firefox doc with "
authors = [
    { name="Tarek Ziadé", email="tarek@ziade.org" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tarekziade/vectorfox"
Issues = "https://github.com/tarekziade/vectorfox/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vectorweb = "vectorfox.run:serve"
vectorfox = "vectorfox.cli:main"
vectorfox-index = "vectorfox.index:main"
